gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-demo-api
spec:
  selector:
    app: tekton-demo-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
