gitops/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-demo-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tekton-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-demo-api
                port:
                  number: 80
